<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Craft Rom</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_exit">Exit</string>
    <string name="chidori_kernel">Chidori Kernel</string>
    <string name="chidori_tag">Go Chidori!</string>
    <string name="logo_desc">Chidori Kernel Logo</string>
    <string name="device_head">"Device: "</string>
    <string name="unknown" translatable="false">Unknown</string>
    <string name="version_head">"Kernel Version: "</string>
    <string name="type_head">"Build Type: "</string>
    <string name="date_head">"Build Date: "</string>
    <string name="status_head">"Status: "</string>
    <string name="last_head">"Last Check: "</string>
    <string name="channel_head">"Update Channel: "</string>
    <string name="check_upd_start">Check for updates on App startup</string>
    <string name="beta_sign">Check for beta releases</string>
    <string name="upd_checking">Checking for updates…</string>
    <string name="profile">Profiles</string>
    <string name="chidori_profile" translatable="false">Chidori</string>
    <string name="chidori_prof_desc">The default Chidori Kernel profile tuned for providing a good battery backup with no noticeable effect on device\'s performance.</string>
    <string name="profile_battery">Battery</string>
    <string name="profile_super_battery">Super Battery</string>
    <string name="battery_prof_desc">F*** the performance, just give me my ultimate battery backup.</string>
    <string name="profile_performance">Performance</string>
    <string name="performance_prof_desc">Profile tuned to push your device performance a notch while still trying to save some juice.</string>
    <string name="profile_gaming">Gaming</string>
    <string name="game_prof_desc">Unleash the beast, kill some bad guys or be the MVP, all with ease.</string>
    <string name="custom_warn_head">Custom Settings</string>
    <string name="custom_warn_desc">You have changes to kernel settings which will be overridden if you change the profile.</string>
    <string name="applying_values_on_boot">Applying settings in %d seconds</string>
    <string name="chidori_version">"Chidori Version: "</string>
    <string name="latest_version">"Latest Version: "</string>
    <string name="set_prof_start">Apply profile on Device Boot</string>
    <string name="set_super_battery">Activate SUPER Save Battery mode</string>
    <string name="new_update">New Update!</string>
    <string name="dialog_version">Chidori Kernel v%1$s</string>
    <string name="download_size">"Download Size: "</string>
    <string name="size_value">%1$s MB</string>
    <string name="download_button">Download</string>
    <string name="cancel_button">Later</string>
    <string name="txt_km" translatable="false">Kernel Manager</string>
    <string name="love"><![CDATA[</> with ❤️ by melles1991]]></string>
    <string name="txt_faqs">FAQs</string>
    <string name="faqs_desc">All about app and related queries</string>
    <string name="faq_q1">Q. What is CraftRomKM?</string>
    <string name="faq_a1">A. CraftRomKM is kernel manager app for Android™ devices running on Chidori Kernel.</string>
    <string name="faq_q2">Q. What is Kernel?</string>
    <string name="faq_a2">A. The kernel is a computer program at the core of a computer\'s operating system with complete control over everything in the system. It is an integral part of any operating system. It is the portion of the operating system code that is always resident in memory.</string>
    <string name="faq_q3">Q. Where we can find sources of CraftRomKM?</string>
    <string name="faq_a3">A. Sources can be found on GitHub</string>
    <string name="faq_q5">Q. How to help in Translation?</string>
    <string name="faq_a5">A. Project strings can be found on Crowdin - https://crowdin.com/project/craft-rom-km</string>
    <string name="faq_q6">Q. Some stuffs and things are missing in app!</string>
    <string name="faq_a6">A. We are currently in alpha stage.</string>
    <string name="opn_src_txt">Open source licenses</string>
    <string name="opn_src_desc">Open source libraries and their license</string>
    <string name="no_root_permission">Craft Rom Kernel Manager needs root permission!</string>
    <string name="no_device_permission">Craft Rom Kernel Manager no support this device!</string>
    <string name="no_kernel_permission">Craft Rom Kernel Manager no support this kernel!</string>
</resources>
