<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FAQsActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_margin="16dp"
        android:paddingBottom="16dp"
        android:scrollbars="vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="#ffff0f00"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/faq_q1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold|italic"
                android:textColor="#ff1ed600"
                android:layout_marginTop="6dp"
                android:text="@string/faq_a1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:textColor="#ffff0f00"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/faq_q2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold|italic"
                android:textColor="#ff1ed600"
                android:layout_marginTop="6dp"
                android:text="@string/faq_a2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                android:textColor="#ffff0f00"
                android:text="@string/faq_q5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold|italic"
                android:textColor="#ff1ed600"
                android:layout_marginTop="6dp"
                android:text="@string/faq_a5"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textStyle="bold"
                textColor="#ffff0f00"
                android:text="@string/faq_q6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:textStyle="bold|italic"
                android:textColor="#ff1ed600"
                android:layout_marginTop="6dp"
                android:text="@string/faq_a6"
                android:autoLink="web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
