<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="52dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/logo_desc"
        android:scaleX="1.2"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/WidgetFoundation.Card.Elevated"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        app:strokeWidth="@dimen/cardStrokeWidth"
        app:cardElevation="@dimen/margin_generic">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/device_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/device_head"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/device_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/device_head"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/chidori_version_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/chidori_version"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/device_head" />

            <TextView
                android:id="@+id/chidori_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/chidori_version_head"
                app:layout_constraintTop_toBottomOf="@id/device_head" />

            <TextView
                android:id="@+id/type_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/type_head"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/chidori_version_head" />

            <TextView
                android:id="@+id/build_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/type_head"
                app:layout_constraintTop_toBottomOf="@id/chidori_version_head" />

            <TextView
                android:id="@+id/version_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/version_head"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/type_head" />

            <TextView
                android:id="@+id/kernel_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/version_head"
                app:layout_constraintTop_toBottomOf="@id/type_head" />

            <TextView
                android:id="@+id/date_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/date_head"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/version_head" />

            <TextView
                android:id="@+id/build_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/date_head"
                app:layout_constraintTop_toBottomOf="@id/version_head" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/upd_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_generic"
        android:layout_marginEnd="@dimen/margin_generic"
        style="@style/WidgetFoundation.Card.Elevated"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="?android:attr/colorBackground"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="16dp"
        app:strokeWidth="@dimen/cardStrokeWidth"
        app:cardElevation="@dimen/no_card_elevation"
        app:layout_constraintTop_toBottomOf="@id/info_card"
        app:strokeColor="@color/colorStroke">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/status_head"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/update_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/status_head"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/last_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/last_head"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/status_head" />

            <TextView
                android:id="@+id/last_check_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/last_head"
                app:layout_constraintTop_toBottomOf="@id/status_head" />

            <TextView
                android:id="@+id/latest_version_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/latest_version"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/last_head" />

            <TextView
                android:id="@+id/latest_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/latest_version_head"
                app:layout_constraintTop_toBottomOf="@id/last_head" />

            <TextView
                android:id="@+id/channel_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/channel_head"
                android:textSize="16sp"
                android:textStyle="bold"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/latest_version_head" />

            <TextView
                android:id="@+id/update_channel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="4dp"
                android:text="@string/unknown"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/channel_head"
                app:layout_constraintTop_toBottomOf="@id/latest_version_head" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>